@startuml Design Model
    class App {
        main(args : String) : void
    }

    class AppController {
        structure : sentenceStructures
        start() : void
        getValidSentence() : String
        createTemplateController() : TemplateController
    }

    class IOController {
        inputSentence() : String
        showInputError() : void
        displaySentence(sentenceDesc : String, flag : int) : void
        showValidationError() : void
        showLanguageError() : void
        showSyntacticTree() : void
        showToxicityError() : void
        showToxicityResults(toxicityLevel : double) : void
    }

    class Sentence {
        sentenceDesc : String
        <<syntacticTree>> : SyntacticNode
        getSentenceTree(syntacticTree : SyntacticNode) : void
        getSentenceDesc() : String
        getSentenceTree() : SyntacticNode
    }

    class SentenceProcessor {
        inputSentence : Sentence
        nonSenseSentence : Sentence
        tempSentence : Sentence
        state : boolean
        createSentence(sentenceDesc : String) : void
        getSyntacticTree() : SyntacticNode
    }
    
    class Validator {
        verifySentence(input : String) : boolean
        validateSentenceStructure(SyntacticNode : <<syntacticTree>>) : boolean
        verifyToxicity(sentenceDesc : String) : boolean
    }

    class Analyzer {
        analyzeSentence(sentenceDesc : String) : void
        buildSyntacticTree(jsonInput : String) : SyntacticNode
    }

    class ApiCaller {
        getApiKey() : String
        getSyntaxAnalysis(sentenceDesc : String) : String
        getToxicityAnalysis(sentenceDesc : String) : String
        makeCall(url : String, payload : String) : String
    }

    /'GoogleAPI non è realmente una classe del nostro sistema'/

    class Template {
        templateDesc : String
        templateWords : int[]
        create(randomStructure : String) : Template
    }

    class TemplateController {
        template : Template
        getWordCount() : int[]
        getTemplateDesc() : String
    }

    class TemplateGenerator {
        SentenceStructures : SentenceStructures
        generateTemplate() : Template
    }

    class SentenceStructures {
        <<structures>> : File
        getRandomStructure() : String
    }
    
    class Nouns {
        nouns : List<String>
        getNouns(count : int) : List<String>
        getNounsCount() : int
    }

    class Verbs {
        verbs : List<String>
        getVerbs(count : int) : List<String>
        getVerbsCount() : int
    }

    class Adjectives {
        adjectives : List<String>
        getAdjectives(count : int) : List<String>
        getAdjectivesCount() : int
    }

    class SystemDictionary {
        nouns : Nouns
        verbs : Verbs
        adjectives : Adjectives
        createDictionary(nouns : List<String>, verbs : List<String>, adjectives : List<String>) : Dictionary<K,V>
        setupWordDic() : void
        initializeDic() : void
        pickDictionaryWords(words : int[]) : Dictionary<K,V>
        getDictionaryWordsCount() : Map<String, Integer>
    }
    
    class WordPicker {
        startWordsExtraction(controller : TemplateController, flagRetry : int) : void
        pickSentenceWords(words : Map<String, List<String>>, qt : int[], flagRetry : int) : Map<String, List<String>>
        getWords() : Map<String, List<String>>
        analyzeSyntacticTree(tree : SyntacticNode) : Map<String, List<String>>
        loopOnNodes (node : SyntacticNode) : void
    }

    class SentenceGenerator {
        sentenceDesc : String
        fillingWords : Map<String, List<String>>
        generateSentenceDesc(controller : TemplateController) : void
    }

    class SyntacticNode {
        text : String
        lemma : String
        partOfSpeech : String
        dependencyLabel : String
        node : List<SyntacticNode>
        addChild(child : SyntacticNode, dependency : String) : void
        printTree(indent : String) : void
    }

    Nouns -* SystemDictionary
    Verbs -* SystemDictionary
    Adjectives -* SystemDictionary
    SyntacticNode -* Sentence
    SentenceStructures o- TemplateGenerator

    App "1" -- "1" AppController

    AppController "1" -- "1" IOController
    AppController "1" -- "1" SentenceProcessor
    AppController "1" -- "1" SentenceStructures
    AppController "1" -- "1" TemplateController
    AppController "1" -- "1" WordPicker

    IOController "1" -- "1" SentenceProcessor
    IOController "1" -- "1" Validator

    Sentence "*"--"1" SentenceProcessor
    SentenceProcessor "1" -- "1" SentenceGenerator
    SentenceProcessor "1" -- "1" Analyzer
    SentenceProcessor "1" -- "1" Validator
    Analyzer "1" -- "1" ApiCaller
    Validator "1" -- "1" ApiCaller
    
    Template "1" -- "1" TemplateGenerator
    TemplateGenerator "1" -- "1" TemplateController
    TemplateController "1" -- "1" WordPicker
    
    WordPicker "1" -- "1" SentenceProcessor
    WordPicker "1" -- "1" SystemDictionary

@enduml